objects/dataloader__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <description>Testing for dataloader extract</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Testing for New Fileds</description>
        <label>Name</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n11__c</fullName>
        <label>n11</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>unique__c</fullName>
        <label>unique</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>dataloader</label>
    <nameField>
        <label>dataloader Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>dataloaders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>